Cacti CHANGELOG

0.8.7
-bug#0000480: error when making a change to graphs displayed per page
-bug#0000833: favicon.ico support
-bug#0000850: Select All for list view
-bug#0000854: Move "Downed Host Detection" to each device
-bug#0000873: Poller hangs in certain situations
-bug#0000876: Ability to search for host with a not UP status
-bug#0000898: Selecting a CUSTOM timespan and then CLEARing yields "LAST HALF HOUR" preset
-bug#0000899: Settings checks paths for existance
-bug#0000902: cmd.php doesn't work with PHP 4.4.1 under windows
-bug#0000903: snmpgetnext function does not exist in PHP less than 5.0
-bug#0000904: Data Source creation fails without php-snmp
-bug#0000906: Every tenth host does not show on tree during console edit
-bug#0000907: Sorting of data sources when interface numbers are used without leading zeros are incorrectly sorted
-bug#0000908: Graphs created by SNMP data queries are losing their specific names if the template is modified
-bug#0000910: Cacti complains when trying to set the data source "maximum value" to any number with a decimal point
-bug#0000912: Nth Percentile thumbnail graphs fail with RRDtool 1.2.15, 1.2.18
-bug#0000913: Allow direct linking to specific graph pages
-bug#0000919: Problem with ping_tcp function in 8.6j and possible fix.
-bug#0000920: Improved handling of rrdtool --font parameter
-bug#0000921: Improvement to ping.pl script
-bug#0000925: Support for host_* variables in the legend
-bug#0000927: Classic export does not recognize thumbnail columns properly
-bug#0000931: New rrdtool fails on empty comment
-bug#0000934: Column 'status_last_error' in table 'host' too short.
-bug#0000937: System output in hosts.php poor for Alcatel
-bug#0000946: Timetick of zero returns down for device
-bug#0000947: Trailing blanK on oid in form causes problems
-bug#0000953: SNMP Passphrase displayed in cleartext
-bug#0000955: Fixed possible denial of service attack by modifying graph image url
-bug#0000956: Patch for tree management