@@ -2,6 +2,7 @@ Cacti CHANGELOG
 
 0.8.7
 -bug#0000480: error when making a change to graphs displayed per page
+-bug#0000829: JVM, Spike detection and Poller
 -bug#0000833: favicon.ico support
 -bug#0000850: Select All for list view
 -bug#0000854: Move "Downed Host Detection" to each device
@@ -45,6 +46,7 @@ Cacti CHANGELOG
 -bug#0000983: Bad SQL: snmp_query_graph_rrd.snmp_query_graph_id=
 -bug#0000984: Poller does not correctly flush poller_output table after a memory error
 -bug#0000989: hyphen - host description used with Data Source Path
+-bug#0001002: Cacti reports incomplete interface status'
 -bug: ss_sql.php causes the script server to crash
 -bug: Timeshifter added to base code.
 -bug: Allow query_ and host_ substitution in COMMENT and CDEF's.
